# autolink

./: Cargo.toml  README.md  file.example  hello - this should fail  readme.md
.github-bak/workflows/: build-binary.yml
.github/workflows/: build-binary.yml
examples/: file1.example
examples/nested-dir/: file2.example
examples/test/: file1.example  test.example
scripts/: build.sh  install.sh
src/: file.example  link.rs  linkfile.rs  main.rs  tests.rs
