[package]
name = "autolink"
version = "0.3.1"
authors = ["vaerl <lukas@mlel.dev>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
description = "A tool automatically symlink files"

[dependencies]
structopt = "0.3"
anyhow = "1.0"
regex = "1"
shellexpand = "2.1"
path-absolutize = "3.0.10"
human-panic = "1.0.3"